<resources>
    <string name="app_name">calculator</string>
    <string name="zero">0</string>
    <string name="a_button">A</string>
    <string name="f_button">F</string>
    <string name="e_button">E</string>
    <string name="d_button">D</string>
    <string name="c_button">C</string>
    <string name="b_button">B</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="equal_button">=</string>
    <string name="clear_button">cl</string>
    <string name="division_symbol">÷</string>
    <string name="plus_symbol">+</string>
    <string name="Subtraction_symbol">–</string>
    <string name="multiplication_symbol">×</string>
    <string name="binary">BIN</string>
    <string name="button_4">4</string>
    <string name="hexadecimal">Hex</string>
    <string name="decimal">DEC</string>
    <string name="octal">OCT</string>
    <string name="backspace">backspace</string>
</resources>